fixed the displayVideo background on tablet and desktop, and added a border bottom to the comments section

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
         @include desktop{
             display: flex;
             flex-direction: column;
-            border-right: 1px solid $primary-silver-color;
+            border-right: 1px solid $secondary-mercury-color;
             padding-top: 1.5rem;
             width: 100%;
         }
