--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -34,6 +34,7 @@
             display: flex;
             align-items: center;
             padding-right: 0;
+            border-bottom: 1px solid $secondary-mercury-color;
         }
 
     }
