--- a/src/components/DisplayVideo/DisplayVideo.scss
+++ b/src/components/DisplayVideo/DisplayVideo.scss
@@ -6,12 +6,26 @@
 .banner{
     padding: 1rem 0 1rem 0;
 
+    @include tablet{
+        background-color: $secondary-brainflix-darkblack-color;
+        padding: 0;
+
+    }
     @include desktop{
         padding-bottom: 0;
     }
 
     &__video{
         width: 100%;
+
+        @include tablet{
+            width: 100%;
+            padding: 0 5rem;
+        }
+
+        @include desktop{
+            padding: 0 10rem;
+        }
     }
 
 }
